html block content bug fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,5 +16,7 @@
           <li> <a href="">Contribute</a></li>
         </ul>
       </nav>
+      {% block content %}
+      {% endblock %}
         </body>
         </html>
