--- a/templates/index.html
+++ b/templates/index.html
@@ -14,20 +14,21 @@
       <hr class="p-rule"/>
       <div class="container">
         <div class="left">
-            <div class="content"><h2>Our brand</h2></div></div>
+            <div class="content"><h2>Our brand</h2>
+                <p class="paragraph">
+                    We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
+                <br>
+                    Our brand is based on four core values: <br> trust, reliability, safety and support.
+                  </p>
+            </div></div>
         <div class="right"><div class="col-3 col-medium-2 p-media-container">
             <img src="../static/logo/Fx-Rootwire-icon-fullColour-RGB-300-whiteBg (1).png" alt=""></div>
         
-        <p class="paragraph">
-            We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
-        <br>
-            Our brand is based on four core values: <br> trust, reliability, safety and support.
-          </p>
       </div>
-      
+      <div class="bottom">
         <h3><a href="/brand" class="button">
             <img src="../static/logo/Fx-Rootwire-logo-monoColour-RGB-800-blk.png">
-        </a></h3>
+        </a></h3></div>
 
       <!-- </div>
       <div class="col-3 col-medium-2 p-media-container">
