--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,11 @@ body {
 
   /* index.html */
 
+  .p-section {
+    position: relative;
+    padding-bottom: 100px; /* Adjust the padding bottom to accommodate the bottom button */
+  }
+
   .paragraph {
     line-height: 1.5; 
   }
@@ -66,21 +71,29 @@ body {
     width: 30%;
     max-width: 1000px;
     display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: rgb(255, 255, 255);
     border: 2px solid black;
     border-radius: 5px;
+    position: relative;
+    padding-bottom: 100px; 
   }
 
-  .container.left{
-    width: 10%;
-    height: 1000px;
-  } 
-  .container.bottom{
-    align-items: flex-end;
+  .top-right{
+    flex: 1;
+    padding-left: 50px; /* Add space between top-left and top-right */
+    right: 0;
+  }
+  .top-right img {
+    width: 70%;
+    height: auto;
   }
 
+  .bottom {
+    position: absolute;
+    bottom: 0;
+    left: 10;
+    margin-top: 20px; 
+  }
   .button {
     display: inline-block;
     padding: 10px 20px;
