--- a/templates/index.html
+++ b/templates/index.html
@@ -5,31 +5,36 @@
     <div class="row--25-75">
         <div class="col">
             <h1>Welcome to Rootwire Design Mine</h1>
+            <hr class="p-rule"/>
         </div>
     </div>
   </div>
 
   <section class="p-section">
-    <div class="row">
-      <hr class="p-rule"/>
       <div class="container">
-        <div class="left">
-            <div class="content"><h2>Our brand</h2>
+        <div class="top-left">
+            <div class="content">
+                <h2>Our brand</h2>
                 <p class="paragraph">
                     We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
                 <br>
                     Our brand is based on four core values: <br> trust, reliability, safety and support.
                   </p>
-            </div></div>
-        <div class="right"><div class="col-3 col-medium-2 p-media-container">
-            <img src="../static/logo/Fx-Rootwire-icon-fullColour-RGB-300-whiteBg (1).png" alt=""></div>
-        
-      </div>
+            </div>
+        </div>
+        <div class="top-right">
+            <div class="col-3 col-medium-2 p-media-container">
+                <img src="../static/logo/Fx-Rootwire-icon-fullColour-RGB-300-whiteBg (1).png" alt="">
+            </div>
+        </div>
       <div class="bottom">
-        <h3><a href="/brand" class="button">
-            <img src="../static/logo/Fx-Rootwire-logo-monoColour-RGB-800-blk.png">
-        </a></h3></div>
-
+        <h3>
+            <a href="/brand" class="button">
+                <img src="../static/logo/Fx-Rootwire-logo-monoColour-RGB-800-blk.png">
+        </a>
+    </h3>
+</div>
+</div>
       <!-- </div>
       <div class="col-3 col-medium-2 p-media-container">
         <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt=""> 
