--- a/templates/index.html
+++ b/templates/index.html
@@ -10,19 +10,19 @@
     </div>
   </div>
 
-  <section class="p-section">
+  <section class="container-row">
       <div class="container">
-        <div class="top-left">
-            <div class="content">
-                <h2>Our brand</h2>
-                <p class="paragraph">
+        <div class="top-left-1">
+            <div class="content-1">
+                <h2 class="title">Our brand</h2>
+                <p class="paragraph-1">
                     We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
                 <br>
                     Our brand is based on four core values: <br> trust, reliability, safety and support.
                   </p>
             </div>
         </div>
-        <div class="top-right">
+        <div class="top-right-1">
             <div class="col-3 col-medium-2 p-media-container">
                 <img src="../static/logo/Fx-Rootwire-icon-fullColour-RGB-300-whiteBg (1).png" alt="">
             </div>
@@ -35,13 +35,39 @@
     </h3>
 </div>
 </div>
-      <!-- </div>
-      <div class="col-3 col-medium-2 p-media-container">
-        <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt=""> 
-        <h3><a href="/resources#logos" class="button">Logos</a></h3>
+
+      <div class="container">
+        <div class="top-left-2">
+            <div class="content">
+                <h2 class="title">Design resources</h2>
+                <p class="paragraph">
+                  On this page you will find everything you need to design and build with our design system.</p>
+            </div>
+        </div>
+      <div class="bottom">
+        <h3>
+            <a href="/brand" class="button">Download our design resources</a>
+      </h3>
       </div>
-    </div> -->
+      </div>
+      
+      <div class="container">
+        <div class="top-left-2">
+            <div class="content">
+                <h2 class="title">Design resources</h2>
+                <p class="paragraph">
+                  On this page you will find everything you need to design and build with our design system.</p>
+            </div>
+        </div>
+      <div class="bottom">
+        <h3>
+            <a href="/brand" class="button">Download our design resources</a>
+      </h3>
+      </div>
+      </div>
   </section>
+
+
 
 
 
