Three containers on main page initial styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,33 +11,33 @@
   </div>
 
   <section class="container-row">
-      <div class="container">
-        <div class="top-left-1">
-            <div class="content-1">
+      <div class="container cont1">
+        <div class="top-left">
+            <div class="content">
                 <h2 class="title">Our brand</h2>
-                <p class="paragraph-1">
+                <p class="paragraph">
                     We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
                 <br>
                     Our brand is based on four core values: <br> trust, reliability, safety and support.
                   </p>
             </div>
         </div>
-        <div class="top-right-1">
+        <div class="top-right">
             <div class="col-3 col-medium-2 p-media-container">
                 <img src="../static/logo/Fx-Rootwire-icon-fullColour-RGB-300-whiteBg (1).png" alt="">
             </div>
         </div>
       <div class="bottom">
         <h3>
-            <a href="/brand" class="button">
+            <a href="/brand" class="button btn1">
                 <img src="../static/logo/Fx-Rootwire-logo-monoColour-RGB-800-blk.png">
         </a>
     </h3>
 </div>
 </div>
 
-      <div class="container">
-        <div class="top-left-2">
+      <div class="container cont2">
+        <div class="top-left">
             <div class="content">
                 <h2 class="title">Design resources</h2>
                 <p class="paragraph">
@@ -46,22 +46,23 @@
         </div>
       <div class="bottom">
         <h3>
-            <a href="/brand" class="button">Download our design resources</a>
+            <a href="/brand" class="button btn2">Download our design resources</a>
       </h3>
       </div>
       </div>
-      
-      <div class="container">
-        <div class="top-left-2">
+
+      <div class="container cont3">
+        <div class="top-left">
             <div class="content">
-                <h2 class="title">Design resources</h2>
+                <h2 class="title">How to contribute</h2>
                 <p class="paragraph">
-                  On this page you will find everything you need to design and build with our design system.</p>
+                  At Rootwire we are always working to improve and update it.
+                </p>
             </div>
         </div>
       <div class="bottom">
         <h3>
-            <a href="/brand" class="button">Download our design resources</a>
+            <a href="/brand" class="button btn3">Learn how to contributLearn how to contribute. </a>
       </h3>
       </div>
       </div>
