--- a/static/style.css
+++ b/static/style.css
@@ -63,10 +63,10 @@ body {
     position: relative;
     padding-bottom: 100px; 
     padding-top: 50px;
-    justify-content: space-evenly;
+    justify-content: space-around;
   }
 
-  .container{
+  .container {
     flex: 1;
     max-width: 30%;
     height: 40vh;
@@ -76,20 +76,28 @@ body {
     border-radius: 5px;
     position: relative;
     padding-bottom: 100px; 
-    
+  }
+  .cont2 {
+    background-color: #6BC2B3;
+  }
+  .cont3 {
+    background-color: #896C89;
   }
 
-  .content-1{
+  .content {
     padding-left: 10px;
+    padding-top: 10px;
   }
 
-  .paragraph-1 {
+  .paragraph {
     line-height: 1.5; 
     position: absolute;
     padding-top: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
-  .top-right-1 img {
+  .top-right img {
     position: absolute;
     width: 30%;
     height: auto;
@@ -105,7 +113,7 @@ body {
     padding-left: 20px;
   }
 
-  .button {
+  .btn1 {
     display: inline-block;
     padding: 10px 20px;
     background-color: #ffffff;
@@ -119,9 +127,32 @@ body {
     justify-content: center; 
     align-items: center; 
   }
-
-  .button img {
+  
+  .btn1 img {
     display: block;
     width: 80px;
     height: auto;
+  }
+
+  .btn2, .btn3 {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #ffffff;
+    color: #000000;
+    text-decoration: none;
+    border: 2px solid black;
+    border-radius: 5px;
+    text-decoration: underline;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    font-size: 12px;
+  }
+  
+  .btn2{
+    background-color: #6BC2B3;
+  }
+
+  .btn3{
+    background-color: #896C89;
   }
