--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Rootwire Design</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <link rel="stylesheet" href="../static/style.css" >
+      <title>Rootwire Design</title>
     </head>
     <body> 
       <nav class="navbar">
