--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 /* base.html */
 
 body {
-    font-family:Arial;
+    font-family: "Ubuntu", sans-serif;
     padding: 100px;
     cursor: default;
   }
@@ -21,8 +21,7 @@ body {
     padding: 0 80px 0 80px;
   }
   .navbar .left img {
-    padding: 0.5px;
-    text-align:center;
+    text-align: left; 
     width: auto; 
     height: 90px; 
   }
@@ -41,7 +40,6 @@ body {
     text-align: center;
   }
   .navbar .center li a:hover{
-    /* background-color: rgb(82, 163, 89, 50%); */
     background-color: rgb(107, 194, 179, 50%);
   }
   .navbar li{
@@ -50,7 +48,7 @@ body {
 
   main {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     min-height: 80vh;
@@ -62,6 +60,10 @@ body {
   }
 
   /* index.html */
+
+  .col {
+    font-size: 24px;
+  }
 
   .container-row {
     display: flex;
@@ -96,6 +98,7 @@ body {
   .content {
     padding-left: 10px;
     padding-top: 10px;
+    font-size: 24px;
   }
 
   .paragraph {
@@ -104,6 +107,7 @@ body {
     padding-top: 15px;
     padding-left: 5px;
     padding-right: 5px;
+    font-size: 21px;
   }
 
   .top-right img {
@@ -118,9 +122,8 @@ body {
   .bottom {
     position: absolute;
     bottom: 2em;
-    left: 2em;
+    left: 1em;
     margin-top: 20px; 
-    padding-left: 20px;
   }
 
   .btn1 {
@@ -131,7 +134,7 @@ body {
     text-decoration: none;
     border: 2px solid black;
     border-radius: 5px;
-    width: 60px; 
+    width: 90px; 
     height: 30px;
     display: flex;
     justify-content: center; 
@@ -140,7 +143,7 @@ body {
   
   .btn1 img {
     display: block;
-    width: 80px;
+    width: 120px;
     height: auto;
   }
 
@@ -156,7 +159,7 @@ body {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    font-size: 12px;
+    font-size: 18px;
   }
   
   .btn2{
