--- a/static/style.css
+++ b/static/style.css
@@ -62,9 +62,8 @@ body {
   /* index.html */
 
   .col {
-    font-size: 24px;
+    font-size: 1.3em;
   }
-
   .container-row {
     display: flex;
     position: relative;
@@ -77,7 +76,6 @@ body {
   .container {
     flex: 1;
     max-width: 30%;
-    height: 30em;
     display: flex;
     background-color: rgb(255, 255, 255);
     border: 2px solid black;
@@ -87,27 +85,27 @@ body {
     min-width: 200px;
     margin: 0 auto; 
     box-sizing: border-box;
+    font-size: 1.2em;
   }
   .cont2 {
     background-color: #6BC2B3;
+    border: none;
   }
   .cont3 {
     background-color: #896C89;
+    border: none;
   }
 
   .content {
-    padding-left: 10px;
-    padding-top: 10px;
-    font-size: 24px;
+    padding-left: 1em;
+    padding-top: 1em;
   }
 
   .paragraph {
     line-height: 1.5; 
-    position: absolute;
-    padding-top: 15px;
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: 21px;
+    padding-right: 2em;
+    padding-top: 2em;
+    margin-bottom: 3em;
   }
 
   .top-right img {
@@ -118,12 +116,12 @@ body {
     right: 0;
   }
 
-
   .bottom {
     position: absolute;
     bottom: 2em;
     left: 1em;
-    margin-top: 20px; 
+    margin-top: 20px;
+    font-size: 0.7em;
   }
 
   .btn1 {
@@ -134,8 +132,8 @@ body {
     text-decoration: none;
     border: 2px solid black;
     border-radius: 5px;
-    width: 90px; 
-    height: 30px;
+    width: 3.5em; 
+    height: 1.5em;
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -143,7 +141,7 @@ body {
   
   .btn1 img {
     display: block;
-    width: 120px;
+    width: 5.5em;
     height: auto;
   }
 
@@ -159,7 +157,7 @@ body {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    font-size: 18px;
+
   }
   
   .btn2{
