--- a/static/style.css
+++ b/static/style.css
@@ -2,9 +2,16 @@
 
 body {
     font-family: "Ubuntu", sans-serif;
-    padding: 100px;
+    padding: 5em; 
     cursor: default;
   }
+  @media (max-width: 1000px) {
+    body {
+      padding: 0;
+      padding-top: 5em;
+    }
+  }
+
   h1{
     text-align: center;
   }
@@ -45,6 +52,42 @@ body {
   .navbar li{
     float: left;
   }
+  .navbar .center.show {
+    display: none;
+  }
+
+  .navbar .center.show {
+    position: absolute;
+    top: 80px; /* Adjust top position as needed */
+    right: 0;
+    background-color: #333; /* Adjust background color as needed */
+    padding: 10px;
+    list-style-type: none;
+  }
+
+  .hamburger-menu {
+    display: none;
+    cursor: pointer;
+    padding: 10px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  .hamburger-menu .line {
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px 0;
+}
+
+  @media (max-width: 750px) {
+    .navbar .center {
+      display: none;
+    }
+    .hamburger-menu {
+      display: block;
+    }
+  }
 
   main {
     display: flex;
@@ -54,10 +97,11 @@ body {
     min-height: 80vh;
   }
 
-  .body {
+  /* .body {
     width: 960px;
     margin: auto;
-  }
+  } */
+
 
   /* index.html */
 
@@ -69,13 +113,12 @@ body {
     position: relative;
     padding-bottom: 100px; 
     padding-top: 50px;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
   }
 
   .container {
     flex: 1;
-    max-width: 30%;
     display: flex;
     background-color: rgb(255, 255, 255);
     border: 2px solid black;
@@ -83,9 +126,20 @@ body {
     position: relative;
     padding-bottom: 100px; 
     min-width: 200px;
-    margin: 0 auto; 
+    margin: 0 10px;
     box-sizing: border-box;
     font-size: 1.2em;
+  }
+  @media (max-width: 1200px) {
+    .container-row {
+      flex-direction: column;
+      align-items: center;
+    }
+    .container{
+      padding-bottom: 2em;
+      margin-bottom: 1em;
+      width: 90%;
+    }
   }
   .cont2 {
     background-color: #6BC2B3;
@@ -96,15 +150,19 @@ body {
     border: none;
   }
 
+
+
   .content {
     padding-left: 1em;
     padding-top: 1em;
+    padding-right: 1em;
   }
 
   .paragraph {
     line-height: 1.5; 
     padding-right: 2em;
     padding-top: 2em;
+    padding-bottom: 2em;
     margin-bottom: 3em;
   }
 
@@ -157,7 +215,6 @@ body {
     display: flex;
     justify-content: center; 
     align-items: center; 
-
   }
   
   .btn2{
@@ -167,3 +224,5 @@ body {
   .btn3{
     background-color: #896C89;
   }
+
+  
