--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         </div>
       <div class="bottom">
         <h3>
-            <a href="/brand" class="button btn2">Download our design resources</a>
+            <a href="" class="button btn2">Download our design resources</a>
       </h3>
       </div>
       </div>
