--- a/templates/brand/index.html
+++ b/templates/brand/index.html
@@ -11,11 +11,11 @@
     </div>
   </div>
 
-  <section class="container-row">
-    <div class="container cont1">
-      <div class="top-left">
-          <div class="content">
-              <h2 class="title">About us</h2>
+  <section class="container-row brand-container">
+    <div id="brand-cont1" class="container brand-cont">
+      <div class="top-left" id="brand-cont1">
+          <div class="content" id="brand-content">
+              <h2 class="title">About us <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt=""></h2>
               <p class="paragraph">
                     Values and other information <br>
                   We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
@@ -24,19 +24,10 @@
                 </p>
           </div>
       </div>
-      <div class="top-right">
-          <div class="col-3 col-medium-2 p-media-container">
-              <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg" alt="">
-          </div>
-      </div>
-    <div class="bottom">
-      <h3>
-        <img src="../static/logo/Fx-Rootwire-logo-fullColour-RGB-550-noborder-transparentBg.png">
-  </h3>
-</div>
 </div>
 
-    <div class="container cont2">
+
+    <!-- <div class="container brand-cont2">
       <div class="top-left">
           <div class="content">
               <h2 class="title">Brand assets</h2>
@@ -49,7 +40,7 @@
     <h3>
         <a href="" class="button btn2">Colour Palette</a>
   </h3>
-    </div>
+    </div> -->
     </div>
 
 </section>
