--- a/templates/brand/index.html
+++ b/templates/brand/index.html
@@ -12,37 +12,38 @@
   </div>
 
   <section class="container-row brand-container">
-    <div id="brand-cont1" class="container brand-cont">
-      <div class="top-left" id="brand-cont1">
-          <div class="content" id="brand-content">
-              <h2 class="title">About us <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt=""></h2>
-              <p class="paragraph">
+
+    <div id="brand-cont1" class="container brand-containers">
+          <div class="content">
+              <h2 class="title">About us <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt="leaf" class="leaf-image"></h2>
+              <p class="brand-paragraph">
                     Values and other information <br>
-                  We Help Bournemouth Small Businesses <br> Minimise Cyber-Risks with Security-First IT
-              <br>
-                  Our brand is based on four core values: <br> trust, reliability, safety and support.
+                  We Help Bournemouth Small Businesses  Minimise Cyber-Risks with Security-First IT
+                  <br>
+                  Our brand is based on four core values: trust, reliability, safety and support.
                 </p>
           </div>
       </div>
-</div>
 
 
-    <!-- <div class="container brand-cont2">
-      <div class="top-left">
-          <div class="content">
-              <h2 class="title">Brand assets</h2>
+    <div id="brand-cont2" class="container brand-containers">
+          <div class="content" id="brand-content">
+              <h2 class="title">Contact Us</h2>
+              <div class="contact-row">
+                <div class="contact-icons">
+                  <img src="../../static/icons/calling.png" alt="Phone Icon" class="icon phone">
+                  <img src="../../static/icons/email.png" alt="Email Icon" class="icon email">
+                </div>
+                <div class="contact-details">
+                  <p class="brand-paragraph">
+                    Existing Customers: +44 1202 909908<br>
+                    Sales Inquiries: +44 1202 909908<br><br>
+                    Email: contact@rootwire.co.uk
+                </p>
+              </div>
+            </div>
           </div>
       </div>
-    <div class="bottom">
-      <h3>
-          <a href="" class="button btn1">Logos</a>
-    </h3>
-    <h3>
-        <a href="" class="button btn2">Colour Palette</a>
-  </h3>
-    </div> -->
-    </div>
-
 </section>
 
 
