--- a/templates/brand/index.html
+++ b/templates/brand/index.html
@@ -15,7 +15,12 @@
 
     <div id="brand-cont1" class="container brand-containers">
           <div class="content">
+
+          <div class="textOverlay">
+              <img src="../../static/icons/mint.png" class="colour-icon">
               <h2 class="title">About us <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt="leaf" class="leaf-image"></h2>
+          </div>
+              
               <p class="brand-paragraph">
                     Values and other information <br>
                   We Help Bournemouth Small Businesses  Minimise Cyber-Risks with Security-First IT
@@ -28,7 +33,12 @@
 
     <div id="brand-cont2" class="container brand-containers">
           <div class="content" id="brand-content">
+
+            <div class="textOverlay">
+              <img src="../../static/icons/purple.png" class="colour-icon">
               <h2 class="title">Contact Us</h2>
+            </div>
+
               <div class="contact-row">
                 <div class="contact-icons">
                   <img src="../../static/icons/calling.png" alt="Phone Icon" class="icon phone">
