--- a/templates/brand/index.html
+++ b/templates/brand/index.html
@@ -18,15 +18,15 @@
 
           <div class="textOverlay">
               <img src="../../static/icons/mint.png" class="colour-icon">
-              <h2 class="title">About us <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt="leaf" class="leaf-image"></h2>
+              <h2 class="title overlay-title">About us <img src="../static/logo/Fx-Rootwire-favicon-fullColour-RGB-20-transparentBg.png" alt="leaf" class="leaf-image"></h2>
           </div>
               
-              <p class="brand-paragraph">
+              <p class="brand-paragraph" id="aboutus-paragraph">
                     Values and other information <br>
                   We Help Bournemouth Small Businesses  Minimise Cyber-Risks with Security-First IT
                   <br>
                   Our brand is based on four core values: trust, reliability, safety and support.
-                </p>
+              </p>
           </div>
       </div>
 
@@ -36,7 +36,7 @@
 
             <div class="textOverlay">
               <img src="../../static/icons/purple.png" class="colour-icon">
-              <h2 class="title">Contact Us</h2>
+              <h2 class="title overlay-title">Contact Us</h2>
             </div>
 
               <div class="contact-row">
