Our brand page - added div section for contact deails inj second container

--- a/templates/brand/index.html
+++ b/templates/brand/index.html
@@ -45,12 +45,16 @@
                   <img src="../../static/icons/email.png" alt="Email Icon" class="icon email">
                 </div>
                 <div class="contact-details">
-                  <p class="brand-paragraph">
-                    Existing Customers: +44 1202 909908<br>
-                    Sales Inquiries: +44 1202 909908<br><br>
-                    Email: contact@rootwire.co.uk
-                </p>
-              </div>
+                  <div class="phone-contact">
+                    <p class="brand-paragraph">
+                      Existing Customers: +44 1202 909908<br>
+                      Sales Inquiries: +44 1202 909908
+                    </p>
+                  </div>
+                  <div class="email-contact">
+                    <p class="brand-paragraph">Email: contact@rootwire.co.uk</p>
+                  </div>
+                </div>
             </div>
           </div>
       </div>
@@ -58,3 +62,11 @@
 
 
 {% endblock %}
+
+<!-- <div class="contact-details">
+  <p class="brand-paragraph">
+    Existing Customers: +44 1202 909908<br>
+    Sales Inquiries: +44 1202 909908<br><br>
+    Email: contact@rootwire.co.uk
+</p>
+</div> -->
