--- a/static/style.css
+++ b/static/style.css
@@ -234,11 +234,19 @@ body {
       width: 7em;
       height: 6em;
     }
-
     .overlay-title {
       position: absolute;
       top: 2.5em;
       left: 3.5em;
+    }
+    .brand-paragraph{
+      font-size: 1.2em;
+      line-height: 1.5;
+      margin-left: 1em;
+    }
+    #aboutus-paragraph{
+      margin-left: 3em;
+      margin-top: 2em;
     }
     .icon {
       width: 30px; 
@@ -259,21 +267,14 @@ body {
       margin-right: 1em;
       gap: 3em; 
     }
+    .phone{
+      padding-top: 1em;
+      padding-bottom: 0.5em;
+    }
     .contact-details {
       display: flex;
       align-items: center; 
-    }
-    #content {
-      display: flex;
       flex-direction: column;
-      align-items: center;
     }
-    .brand-paragraph{
-      font-size: 1.2em;
-      line-height: 1.5;
-      margin-left: 1em;
-    }
-    #aboutus-paragraph{
-      margin-left: 3em;
-      margin-top: 2em;
-    }
+    
+   
