Added design resources route and basic html

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         </div>
       <div class="bottom">
         <h3>
-            <a href="" class="button btn2">Download our design resources</a>
+            <a href="/resources" class="button btn2">Download our design resources</a>
       </h3>
       </div>
       </div>
@@ -62,7 +62,7 @@
         </div>
       <div class="bottom">
         <h3>
-            <a href="/brand" class="button btn3">Learn how to contributLearn how to contribute. </a>
+            <a href="/contibute" class="button btn3">Learn how to contributLearn how to contribute. </a>
       </h3>
       </div>
       </div>
