--- a/templates/resources/index.html
+++ b/templates/resources/index.html
@@ -11,6 +11,43 @@
         </div>
       </div>
 
+<div class="resources-container-row">
+    <div class="resources-container">
+        <div class="image">
+            <img src="../../static/logo/Fx-Rootwire-icon-fullColour-RGB-80-whiteRoundFrameBg.png">
+        </div>
+        <div class="resources-button">
+            <a href="/resources/logos" class="logos-button">Logos</a>
+        </div>
+    </div>
+        <div class="resources-container">
+            <div class="image">
+                <img src="../../static/colours/colour_palette.png.png">
+            </div>
+            <div class="resources-button">
+                <a href="/resources/colours" class="logos-button">Colour Palette</a>
+            </div>
+        </div>
+        <div class="resources-container">
+            <div class="image">
+                <img src="../../static/logo/Fx-Rootwire-logo-fullColour-RGB-550-noborder-transparentBg.png">
+            </div>
+            <div class="resources-button">
+                <a href="/resources/wallpapers" class="logos-button">Wallpapers</a>
+            </div>
+        </div>
+        <div class="resources-container">
+            <div class="image">
+                <img src="">
+            </div>
+            <div class="resources-button">
+                <a href="/resources/wallpapers" class="logos-button">Templates</a>
+            </div>
+        </div>
+    </div>
+
+      
+
 </section>
 
 
