--- a/templates/resources/index.html
+++ b/templates/resources/index.html
@@ -13,37 +13,38 @@
 
 <div class="resources-container-row">
     <div class="resources-container">
-        <div class="image">
-            <img src="../../static/logo/Fx-Rootwire-icon-fullColour-RGB-80-whiteRoundFrameBg.png">
+        <div class="resources-image">
+            <img src="../../static/logo/Fx-Rootwire-icon-fullColour-RGB-80-whiteRoundFrameBg.png" alt="Logo Image" class="responsive-image">
         </div>
         <div class="resources-button">
             <a href="/resources/logos" class="logos-button">Logos</a>
         </div>
     </div>
         <div class="resources-container">
-            <div class="image">
-                <img src="../../static/colours/colour_palette.png.png">
+            <div class="resources-image">
+                <img src="../../static/colours/colour_palette.png.png" alt="Colour Image" class="responsive-image">
             </div>
             <div class="resources-button">
                 <a href="/resources/colours" class="logos-button">Colour Palette</a>
             </div>
         </div>
         <div class="resources-container">
-            <div class="image">
-                <img src="../../static/logo/Fx-Rootwire-logo-fullColour-RGB-550-noborder-transparentBg.png">
-            </div>
-            <div class="resources-button">
-                <a href="/resources/wallpapers" class="logos-button">Wallpapers</a>
-            </div>
-        </div>
-        <div class="resources-container">
-            <div class="image">
-                <img src="">
+            <div class="resources-image">
+                <img src="../../static/logo/Fx-Rootwire-logo-fullColour-RGB-550-noborder-transparentBg.png" alt="Example Image" class="responsive-image">
             </div>
             <div class="resources-button">
                 <a href="/resources/wallpapers" class="logos-button">Templates</a>
             </div>
         </div>
+        <div class="resources-container">
+            <div class="resources-image">
+                <img src="../../static/Wallpaper/A4 background.png " alt="Wallpaper Image" class="responsive-image">
+            </div>
+            <div class="resources-button">
+                <a href="/resources/wallpapers" class="logos-button">Wallpapers</a>
+            </div>
+        </div>
+
     </div>
 
       
