--- a/static/style.css
+++ b/static/style.css
@@ -295,13 +295,12 @@ body {
         align-items: center;
         justify-content: center;
         background-color: rgb(255, 255, 255);
-        border: 2px solid black;
-        border-radius: 5px;
         position: relative;
         min-width: 200px;
         margin: 0 10px;
         box-sizing: border-box;
         font-size: 1.2em;
+        padding-top: 2em;
         padding-bottom: 2em;
     }
     /* .btn1*/
@@ -327,7 +326,8 @@ body {
       padding-bottom: 2em;
     }
     .responsive-image {
-      max-width: 80%; /* Make sure the image doesn't exceed the container's width */
+      max-width: 70%; /* Make sure the image doesn't exceed the container's width */
+      max-height: 60%;
       height: auto; 
       object-fit: contain; /* Ensure the image fits within its container */
     }
